# auv_thruster_control

./: CMakeLists.txt  README.md  package.xml  thruster_test.sh
include/auv_thrust_control/: Axis.hpp  Strafe.hpp  Thrusters.hpp
include/auv_thruster_control/: Axis.hpp  Strafe.hpp  Thrusters.hpp
launch/: test.launch  thruster_control.launch  thruster_control_pid.launch
launch/pid/: heave.launch  pitch.launch  roll.launch  surge.launch  sway.launch  yaw.launch
msg/: Thrust.msg
pid/: heave.yaml  pitch.yaml  roll.yaml  surge.yaml  sway.yaml  yaw.yaml
src/: Axis.cpp  Strafe.cpp  Thrusters.cpp  thruster_controller_node.cpp  thruster_test_node.cpp
